--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,7 @@
     "require": {
         "ramsey/uuid": "^3.8",
         "guzzlehttp/psr7": "^1.4",
-        "illuminate/support": "^5.5",
-        "jshayes/fake-requests": "^2.1"
+        "illuminate/support": "^5.5"
     },
     "autoload": {
         "psr-4": {
@@ -21,6 +20,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^7.4",
-        "orchestra/testbench": "^3.5"
+        "orchestra/testbench": "^3.5",
+        "jshayes/fake-requests": "^2.1"
     }
 }
