--- a/composer.json
+++ b/composer.json
@@ -22,5 +22,12 @@
         "phpunit/phpunit": "^7.4",
         "orchestra/testbench": "^3.5",
         "jshayes/fake-requests": "^2.1"
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "SoapBox\\Idempotency\\ServiceProvider"
+            ]
+        }
     }
 }
