--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,18 @@
     "type": "library",
     "description": "A Laravel library that manages idempotency keys for a request",
     "license": "MIT",
+    "repositories": [
+        {
+            "type": "path",
+            "url": "../fake-requests"
+        }
+      ],
     "require": {
         "ramsey/uuid": "^3.8",
         "guzzlehttp/psr7": "^1.4",
-        "illuminate/support": "^6.0"
+        "illuminate/support": "^7.0"
     },
+    
     "autoload": {
         "psr-4": {
             "SoapBox\\Idempotency\\": "src/"
@@ -20,8 +27,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0",
-        "orchestra/testbench": "^4.0",
-        "jshayes/fake-requests": "^3.0"
+        "orchestra/testbench": "^5.0",
+        "jshayes/fake-requests": "dev-master"
     },
     "extra": {
         "laravel": {
