--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     "require-dev": {
         "phpunit/phpunit": "^8.0",
         "orchestra/testbench": "^5.0",
-        "jshayes/fake-requests": "dev-master"
+        "jshayes/fake-requests": "^4.0"
     },
     "extra": {
         "laravel": {
