--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     "require-dev": {
         "phpunit/phpunit": "^9.3",
         "orchestra/testbench": "^6.17",
-        "jshayes/fake-requests": "dev-master"
+        "jshayes/fake-requests": "^5.0"
     },
     "extra": {
         "laravel": {
