--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "require": {
         "ramsey/uuid": "^4.0",
         "guzzlehttp/psr7": "^1.4",
-        "illuminate/support": "^8.12"
+        "illuminate/support": "^10.48.11"
     },
     "repositories": [
         {
@@ -25,9 +25,9 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.3",
-        "orchestra/testbench": "^6.17",
-        "jshayes/fake-requests": "^5.0"
+        "phpunit/phpunit": "^10.5.20",
+        "orchestra/testbench": "^8.23.0",
+        "jshayes/fake-requests": "dev-php81"
     },
     "extra": {
         "laravel": {
